--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ h3{
 	margin: 0;
 	padding: 4px;
 	/* add an underline like the one on the h2s to the h3s, but make it solid and mint color */
+	text-decoration: solid underline var(--mint) 4px;	
 }
 
 nav{
@@ -81,6 +82,7 @@ nav ul{
 
 nav a{
 	/* make these display as block level elements */
+	display: block;
 	margin: 1rem auto;
 	padding: 1rem;
 	background-color: var(--tiffany);
@@ -89,6 +91,11 @@ nav a{
 	/* remove the underline */
 	/* make the font's size 1.2rem */
 	/* make the font bolder (600) */
+	color: var(--dk-gray);
+	text-align: center;
+	text-decoration: none;
+	font-size: 1.2rem;
+	font-weight: 600;
 }
 
 nav a:hover{
@@ -112,6 +119,9 @@ p{
 	/* set a max-width of 55 characters */
 	/* add an indent on the first line of 2rem */
 	/* center those paragraphs (not the text) on the page */
+	max-width: 55ch;
+	text-indent: 2rem;
+	margin: 0 auto;
 	padding: 0.5rem;
 }
 
@@ -125,11 +135,13 @@ a:hover{
 
 dl, ol, main ul{
 	/* limit the width of these lists to 55 characters */
+	max-width: 55ch;
 	margin: 1rem auto;
 }
 
 dt{
 	/* make this font display in bold weight */
+	font-weight: bold;
 }
 
 dt::before{
